black friday section

--- a/main.html
+++ b/main.html
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="black-friday">
         <h2>BLACK FRIDAY EXCLUSIVE</h2>
-        <p>Free shipping on all order for VIP 2 and up!</p>
+        <p>Free shipping on all order for<br>VIP 2 and up!</p>
       </div>
       <button type="button" name="shop-now">Shop Now</button>
     </div>
