--- a/main.html
+++ b/main.html
@@ -23,16 +23,16 @@
               <li><a href="#">Accessories</a></li>
             </ul>
           </div>
-          <img src="assets/logo.png">
+          <img src="assets/nav-bar-menu/logo.png">
           <div class="right-nav">
             <ul>
-              <li><img src="assets\bx_bx-user.png"></li>
-              <li><img src="assets\bx_bx-shopping-bag.png"></li>
-              <li><img src="assets\bx_bx-heart.png"></li>
-              <li><img src="assets\bx_bx-support.png"></li>
-              <li><img src="assets\bx_bx-search.png"></li>
+              <li><img src="assets/nav-bar-menu/bx_bx-user.png"></li>
+              <li><img src="assets/nav-bar-menu/bx_bx-shopping-bag.png"></li>
+              <li><img src="assets/nav-bar-menu/bx_bx-heart.png"></li>
+              <li><img src="assets/nav-bar-menu/bx_bx-support.png"></li>
+              <li><img src="assets/nav-bar-menu/bx_bx-search.png"></li>
             </ul>
-            <img src="assets\Currency.png">
+            <img src="assets/nav-bar-menu/Currency.png">
           </div>
         </nav>
       </div>
@@ -43,11 +43,11 @@
       <div class="container">
         <div class="benefits-list">
           <ul>
-            <li><img src="assets/Benefits.png"></li>
-            <li><img src="assets/Benefits2.png"></li>
-            <li><img src="assets/Benefits3.png"></li>
-            <li><img src="assets/Benefits4.png"></li>
-            <li><img src="assets/Benefits5.png"></li>
+            <li><img src="assets/benefits/Benefits.png"></li>
+            <li><img src="assets/benefits/Benefits2.png"></li>
+            <li><img src="assets/benefits/Benefits3.png"></li>
+            <li><img src="assets/benefits/Benefits4.png"></li>
+            <li><img src="assets/benefits/Benefits5.png"></li>
           </ul>
         </div>
       </div>
@@ -56,10 +56,9 @@
 <!--- slideshow --->
   <div id="slideshow">
     <div class="mySlides fade">
-      <div class="slide1-col-1">
-      </div>
+      <div class="slide1-col-1"></div>
       <div class="slide1-col-2">
-        <img src="assets/slideshow_content.png" class="slideshow_content">
+        <img src="assets/carousel/slideshow_content.png" class="slideshow_content">
         <button type="button" name="shop-now">Shop Now</button>
       </div>
     </div>
@@ -76,18 +75,152 @@
     </div>
   </div>
 
-<!--- now trending --->
-  <div class="now-trending">
-    <div class="container">
-      <h1>Now Trending</h1>
-      <p>See what everyone's wearing right now</p>
-      <div class="">
+  <!--- now trending --->
+    <div class="now-trending">
+      <div class="container">
+        <h1>Now Trending</h1>
+        <p>See what everyone's wearing right now</p>
 
+        <div class="trending-image-col">
+          <div class="trending-image">
+            <img src="./assets/trending/8.png" alt="">
+            <p> WINTER FASHION </p>
+          </div>
+
+          <div class="trending-image">
+            <img src="./assets/trending/7.png" alt="">
+            <p> BOOTS </p>
+          </div>
+
+          <div class="trending-image">
+            <img src="./assets/trending/6.png" alt="">
+            <p> NIGHT OUT </p>
+          </div>
+
+          <div class="trending-image">
+            <img src="./assets/trending/5.png" alt="">
+            <p> HOLIDAYS </p>
+          </div>
+        </div>
+
+        <div class="trending-image-col">
+          <div class="trending-image">
+            <img src="./assets/trending/4.png" alt="">
+            <p> OUTERWEAR </p>
+          </div>
+
+          <div class="trending-image">
+            <img src="./assets/trending/3.png" alt="">
+            <p> WHITE DRESSES </p>
+          </div>
+
+          <div class="trending-image">
+            <img src="./assets/trending/2.png" alt="">
+            <p> SWEATERS </p>
+          </div>
+
+          <div class="trending-image">
+            <img src="./assets/trending/1.png" alt="">
+            <p> PARTY </p>
+          </div>
+        </div>
+
+        <div class="hastag-container">
+        <div class="hastag">
+          #Thanksgiving
+        </div>
+
+        <div class="hastag">
+          #NewYears
+        </div>
+
+        <div class="hastag">
+          #Knitted
+        </div>
+
+        <div class="hastag">
+          #Pajamas
+        </div>
+
+        <div class="hastag">
+          #WFH
+        </div>
+
+        <div class="hastag">
+          #FallFashion
+        </div>
+
+      </div>
+      </div>
+    </div>
+
+
+<!--- new arrivals --->
+  <div id="new-arrivals">
+    <div class="new-arrival-container">
+      <div class="new-arrivals-col-1"></div>
+      <div class="new-arrivals-col-2">
+        <h2>New<br>Arrivals</h2>
+        <p>Get ready for the hollidays with us!</p>
+        <button type="button" name="shop-now">Shop Now</button>
       </div>
     </div>
   </div>
 
+<!--- Recent Bought --->
+  <div class="recent_bought">
+    <div class="container">
+      <h1>Recently Bought </h1>
 
+      <div class="column">
+        <div class="items">
+          <img src="./assets/recent/1.png" alt="">
+          <p class="description"> Festive Looks Rust Red Ribbed Velvet Long Sleeve Bodysuit </p>
+        <div class="buy-container">
+          <p class="price"> $38 </p>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <div class="items">
+        <img src="./assets/recent/2.png" alt="">
+        <p class="description"> Chevron Flap Crossbody Bag </p>
+        <div class="buy-container">
+          <p class="price"> $5.77 <span> $7.34 </span></p>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <div class="items">
+        <img src="./assets/recent/3.png" alt="">
+        <p class="description"> Manilla Tan Multi Plaid Oversized Fringe Scarf </p>
+        <div class="buy-container">
+          <p class="price"> $29 <span> $39 </span></p>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <div class="items">
+        <img src="./assets/recent/4.png" alt="">
+        <p class="description"> Diamante Puff Sleeve Dress - Black </p>
+        <div class="buy-container">
+          <p class="price"> $29 <span> $39 </span></p>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <div class="items">
+        <img src="./assets/recent/5.png" alt="">
+        <p class="description">  Banneth Open Front Formal Dress in Black </p>
+        <div class="buy-container">
+          <p class="price"> $69 <span> $99.95 </span></p>
+          <button>Buy</button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
 
   </body>
 </html>
