change css and html for arrivals section, benefits and nav bar section

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
   <body>
 
 <!--- navigation bar --->
-    <div id="nav-bar">
+    <div class="nav-bar">
       <div class="container">
         <nav>
           <div class="left-nav">
@@ -39,7 +39,7 @@
     </div>
 
 <!--- benefits --->
-    <div id="benefits">
+    <div class="benefits">
       <div class="container">
         <div class="benefits-list">
           <ul>
@@ -54,7 +54,7 @@
     </div>
 
 <!--- slideshow --->
-  <div id="slideshow">
+  <div class="slideshow">
     <div class="mySlides fade">
       <div class="slide1-col-1"></div>
       <div class="slide1-col-2">
@@ -156,7 +156,7 @@
 
 
 <!--- new arrivals --->
-  <div id="new-arrivals">
+  <div class="new-arrivals">
     <div class="new-arrival-container">
       <div class="new-arrivals-col-1"></div>
       <div class="new-arrivals-col-2">
@@ -168,7 +168,7 @@
   </div>
 
 <!--- Recent Bought --->
-  <div class="recent_bought">
+  <div class="recent-bought">
     <div class="container">
       <h1>Recently Bought </h1>
 
