--- a/main.html
+++ b/main.html
@@ -44,6 +44,7 @@
         <span class="close" onclick="toggleShoppingBagModal()">&times;</span>
         <h2>Shopping Bag</h2>
         <div id="shoppingBagItems"></div>
+        <button class="btn btn-primary" onclick="redirectToCheckout()">Checkout</button>
       </div>
     </div>
 
