--- a/checkout.html
+++ b/checkout.html
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<!-- Bootstrap JS (optional if you need it) -->
+<!-- Bootstrap JS  -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
