--- a/main.html
+++ b/main.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
+
 <link rel="stylesheet" href="main-styles.css">
 <script src="main.js"></script>
+<!--- Montserrat Font --->
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
 <html lang="en" dir="ltr">
@@ -15,6 +17,7 @@
     <div class="nav-bar">
       <div class="container">
         <nav>
+
           <div class="left-nav">
             <ul>
               <li><a href="#" style="font-weight: 600;">Women</a></li>
@@ -23,7 +26,9 @@
               <li><a href="#">Accessories</a></li>
             </ul>
           </div>
+
           <img src="assets/nav-bar-menu/logo.png">
+
           <div class="right-nav">
             <ul>
               <li><img src="assets/nav-bar-menu/bx_bx-user.png"></li>
@@ -34,6 +39,7 @@
             </ul>
             <img src="assets/nav-bar-menu/Currency.png">
           </div>
+
         </nav>
       </div>
     </div>
@@ -51,6 +57,7 @@
 <!--- benefits --->
     <div class="benefits">
       <div class="container">
+
         <div class="benefits-list">
           <ul>
             <li><img src="assets/benefits/Benefits.png"></li>
@@ -60,27 +67,33 @@
             <li><img src="assets/benefits/Benefits5.png"></li>
           </ul>
         </div>
+
       </div>
     </div>
 
 <!--- slideshow --->
   <div class="slideshow">
     <div class="mySlides fade">
+
       <div class="slide1-col-1"></div>
+
       <div class="slide1-col-2">
         <img src="assets/carousel/slideshow_content.png" class="slideshow_content">
         <button type="button" name="shop-now">Shop Now</button>
       </div>
+
     </div>
   </div>
 
 <!--- vip exclusive --->
   <div id="vip-exclusive">
     <div class="container">
+
       <div class="black-friday">
         <h2>BLACK FRIDAY EXCLUSIVE</h2>
         <p>Free shipping on all order for<br>VIP 2 and up!</p>
       </div>
+
       <button type="button" name="shop-now">Shop Now</button>
     </div>
   </div>
@@ -92,6 +105,7 @@
         <p>See what everyone's wearing right now</p>
 
         <div class="trending-image-col">
+
           <div class="trending-image">
             <img src="./assets/trending/8.png" alt="">
             <p> WINTER FASHION </p>
@@ -111,6 +125,7 @@
             <img src="./assets/trending/5.png" alt="">
             <p> HOLIDAYS </p>
           </div>
+
         </div>
 
         <div class="trending-image-col">
