edting spacing to make easier to read the code

--- a/main.html
+++ b/main.html
@@ -72,31 +72,31 @@
     </div>
 
 <!--- slideshow --->
-  <div class="slideshow">
-    <div class="mySlides fade">
+    <div class="slideshow">
+      <div class="mySlides fade">
 
-      <div class="slide1-col-1"></div>
+        <div class="slide1-col-1"></div>
 
-      <div class="slide1-col-2">
-        <img src="assets/carousel/slideshow_content.png" class="slideshow_content">
-        <button type="button" name="shop-now">Shop Now</button>
+        <div class="slide1-col-2">
+          <img src="assets/carousel/slideshow_content.png" class="slideshow_content">
+          <button type="button" name="shop-now">Shop Now</button>
+        </div>
+
       </div>
-
     </div>
-  </div>
 
 <!--- vip exclusive --->
-  <div id="vip-exclusive">
-    <div class="container">
+    <div id="vip-exclusive">
+      <div class="container">
 
-      <div class="black-friday">
-        <h2>BLACK FRIDAY EXCLUSIVE</h2>
-        <p>Free shipping on all order for<br>VIP 2 and up!</p>
+        <div class="black-friday">
+          <h2>BLACK FRIDAY EXCLUSIVE</h2>
+          <p>Free shipping on all order for<br>VIP 2 and up!</p>
+        </div>
+
+        <button type="button" name="shop-now">Shop Now</button>
       </div>
-
-      <button type="button" name="shop-now">Shop Now</button>
     </div>
-  </div>
 
   <!--- now trending --->
     <div class="now-trending">
@@ -104,148 +104,154 @@
         <h1>Now Trending</h1>
         <p>See what everyone's wearing right now</p>
 
-        <div class="trending-image-col">
+          <div class="trending-image-col">
 
-          <div class="trending-image">
-            <img src="./assets/trending/8.png" alt="">
-            <p> WINTER FASHION </p>
+            <div class="trending-image">
+              <img src="./assets/trending/8.png" alt="">
+              <p> WINTER FASHION </p>
+            </div>
+
+            <div class="trending-image">
+              <img src="./assets/trending/7.png" alt="">
+              <p> BOOTS </p>
+            </div>
+
+            <div class="trending-image">
+              <img src="./assets/trending/6.png" alt="">
+              <p> NIGHT OUT </p>
+            </div>
+
+            <div class="trending-image">
+              <img src="./assets/trending/5.png" alt="">
+              <p> HOLIDAYS </p>
+            </div>
+
           </div>
 
-          <div class="trending-image">
-            <img src="./assets/trending/7.png" alt="">
-            <p> BOOTS </p>
+          <div class="trending-image-col">
+            <div class="trending-image">
+              <img src="./assets/trending/4.png" alt="">
+              <p> OUTERWEAR </p>
+            </div>
+
+            <div class="trending-image">
+              <img src="./assets/trending/3.png" alt="">
+              <p> WHITE DRESSES </p>
+            </div>
+
+            <div class="trending-image">
+              <img src="./assets/trending/2.png" alt="">
+              <p> SWEATERS </p>
+            </div>
+
+            <div class="trending-image">
+              <img src="./assets/trending/1.png" alt="">
+              <p> PARTY </p>
+            </div>
           </div>
 
-          <div class="trending-image">
-            <img src="./assets/trending/6.png" alt="">
-            <p> NIGHT OUT </p>
-          </div>
+          <div class="hastag-container">
+            <div class="hastag">
+              #Thanksgiving
+            </div>
 
-          <div class="trending-image">
-            <img src="./assets/trending/5.png" alt="">
-            <p> HOLIDAYS </p>
-          </div>
+            <div class="hastag">
+              #NewYears
+            </div>
 
-        </div>
+            <div class="hastag">
+              #Knitted
+            </div>
 
-        <div class="trending-image-col">
-          <div class="trending-image">
-            <img src="./assets/trending/4.png" alt="">
-            <p> OUTERWEAR </p>
-          </div>
+            <div class="hastag">
+              #Pajamas
+            </div>
 
-          <div class="trending-image">
-            <img src="./assets/trending/3.png" alt="">
-            <p> WHITE DRESSES </p>
-          </div>
+            <div class="hastag">
+              #WFH
+            </div>
 
-          <div class="trending-image">
-            <img src="./assets/trending/2.png" alt="">
-            <p> SWEATERS </p>
-          </div>
+            <div class="hastag">
+              #FallFashion
+            </div>
 
-          <div class="trending-image">
-            <img src="./assets/trending/1.png" alt="">
-            <p> PARTY </p>
           </div>
         </div>
-
-        <div class="hastag-container">
-        <div class="hastag">
-          #Thanksgiving
-        </div>
-
-        <div class="hastag">
-          #NewYears
-        </div>
-
-        <div class="hastag">
-          #Knitted
-        </div>
-
-        <div class="hastag">
-          #Pajamas
-        </div>
-
-        <div class="hastag">
-          #WFH
-        </div>
-
-        <div class="hastag">
-          #FallFashion
-        </div>
-
       </div>
-      </div>
-    </div>
 
 
 <!--- new arrivals --->
-  <div class="new-arrivals">
-    <div class="new-arrival-container">
-      <div class="new-arrivals-col-1"></div>
-      <div class="new-arrivals-col-2">
-        <h2>New<br>Arrivals</h2>
-        <p>Get ready for the hollidays with us!</p>
-        <button type="button" name="shop-now">Shop Now</button>
+    <div class="new-arrivals">
+      <div class="new-arrival-container">
+        <div class="new-arrivals-col-1"></div>
+        <div class="new-arrivals-col-2">
+          <h2>New<br>Arrivals</h2>
+          <p>Get ready for the hollidays with us!</p>
+          <button type="button" name="shop-now">Shop Now</button>
+        </div>
       </div>
     </div>
-  </div>
 
 <!--- Recent Bought --->
-  <div class="recent-bought">
-    <div class="container">
-      <h1>Recently Bought </h1>
+    <div class="recent-bought">
+      <div class="container">
+        <h1>Recently Bought </h1>
 
-      <div class="column">
-        <div class="items">
-          <img src="./assets/recent/1.png" alt="">
-          <p class="description"> Festive Looks Rust Red Ribbed Velvet Long Sleeve Bodysuit </p>
-        <div class="buy-container">
-          <p class="price"> $38 </p>
-          <button onclick="handleBuyClick(this)">Buy</button>
-        </div>
-      </div>
+        <div class="column">
 
-      <div class="items">
-        <img src="./assets/recent/2.png" alt="">
-        <p class="description"> Chevron Flap Crossbody Bag </p>
-        <div class="buy-container">
-          <p class="price"> $5.77 <span> $7.34 </span></p>
-          <button onclick="handleBuyClick(this)">Buy</button>
-        </div>
-      </div>
+          <div class="items">
+            <img src="./assets/recent/1.png" alt="">
+            <p class="description"> Festive Looks Rust Red Ribbed Velvet Long Sleeve Bodysuit </p>
+            <div class="buy-container">
+              <p class="price"> $38 </p>
+              <button onclick="handleBuyClick(this)">Buy</button>
+            </div>
+          </div>
 
-      <div class="items">
-        <img src="./assets/recent/3.png" alt="">
-        <p class="description"> Manilla Tan Multi Plaid Oversized Fringe Scarf </p>
-        <div class="buy-container">
-          <p class="price"> $29 <span> $39 </span></p>
-          <button onclick="handleBuyClick(this)">Buy</button>
-        </div>
-      </div>
+          <div class="items">
+            <img src="./assets/recent/2.png" alt="">
+            <p class="description"> Chevron Flap Crossbody Bag </p>
+            <div class="buy-container">
+              <p class="price"> $5.77 <span> $7.34 </span></p>
+              <button onclick="handleBuyClick(this)">Buy</button>
+            </div>
+          </div>
 
-      <div class="items">
-        <img src="./assets/recent/4.png" alt="">
-        <p class="description"> Diamante Puff Sleeve Dress - Black </p>
-        <div class="buy-container">
-          <p class="price"> $29 <span> $39 </span></p>
-          <button onclick="handleBuyClick(this)">Buy</button>
-        </div>
-      </div>
+          <div class="items">
+            <img src="./assets/recent/3.png" alt="">
+            <p class="description"> Manilla Tan Multi Plaid Oversized Fringe Scarf </p>
+            <div class="buy-container">
+              <p class="price"> $29 <span> $39 </span></p>
+              <button onclick="handleBuyClick(this)">Buy</button>
+            </div>
+          </div>
 
-      <div class="items">
-        <img src="./assets/recent/5.png" alt="">
-        <p class="description">  Banneth Open Front Formal Dress in Black </p>
-        <div class="buy-container">
-          <p class="price"> $69 <span> $99.95 </span></p>
-          <button onclick="handleBuyClick(this)">Buy</button>
+          <div class="items">
+            <img src="./assets/recent/4.png" alt="">
+            <p class="description"> Diamante Puff Sleeve Dress - Black </p>
+            <div class="buy-container">
+              <p class="price"> $29 <span> $39 </span></p>
+              <button onclick="handleBuyClick(this)">Buy</button>
+            </div>
+          </div>
+
+          <div class="items">
+            <img src="./assets/recent/5.png" alt="">
+            <p class="description">  Banneth Open Front Formal Dress in Black </p>
+            <div class="buy-container">
+              <p class="price"> $69 <span> $99.95 </span></p>
+              <button onclick="handleBuyClick(this)">Buy</button>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
 
-  </div>
-</div>
+<!--- Recent Bought --->
+    <div class="">
+
+    </div>
 
   </body>
 </html>
