adding instagram section

--- a/main.html
+++ b/main.html
@@ -248,9 +248,39 @@
       </div>
     </div>
 
-<!--- Recent Bought --->
-    <div class="">
+<!--- instagram section --->
+    <div class="insta-section">
+      <div class="container">
+        <h1>Your Next Inspo</h1>
+        <p>Checkout who’s wearing what by using #THREADEDInspo on Instagram</p>
 
+        <div class="insta-column">
+
+          <div class="insta-image">
+            <img src="assets/instagram/insta1.png">
+          </div>
+
+          <div class="insta-image">
+            <img src="assets/instagram/insta2.png">
+          </div>
+
+          <div class="insta-image">
+            <img src="assets/instagram/insta3.png">
+          </div>
+
+          <div class="insta-image">
+            <img src="assets/instagram/insta4.png">
+          </div>
+
+          <div class="insta-image">
+            <img src="assets/instagram/insta5.png">
+          </div>
+
+        </div>
+
+        <button type="button" name="button">view all post</button>
+
+      </div>
     </div>
 
   </body>
