--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <html lang="en" dir="ltr">
   <head>
+    <!--- icons fontawesome --->
+    <script src="https://kit.fontawesome.com/70766f24e6.js" crossorigin="anonymous"></script>
+
     <meta charset="utf-8">
     <title>THREADED</title>
   </head>
@@ -280,6 +283,17 @@
 
         <button type="button" name="button">view all post</button>
 
+      </div>
+    </div>
+
+<!--- newsletter section --->
+    <div class="newsletter-section">
+      <div class="newsletter-container">
+        <h1>sign up for exclusive deals and updates</h1>
+        <form>
+          <input type="email" id="email" name="email" placeholder="Your Email Address">
+          <button type="submit"><i class="fa-solid fa-greater-than"></i></button>
+        </form>
       </div>
     </div>
 
