designing checkout page and shopping bag, adding remove and add function on the checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -3,9 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Selected Items</title>
+  <title>Shopping Cart Page</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      font-size: 24px;
+      color: #333333;
+    }
+
+    .btn-primary {
+      background-color: #007bff;
+      border-color: #007bff;
+    }
+
+    .btn-primary:hover {
+      background-color: #0056b3;
+      border-color: #0056b3;
+    }
+
+    .card {
+      border: 1px solid #ced4da;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+
+    .card-img-top {
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+    }
+
+    .card-body {
+      padding: 20px;
+    }
+
+    .card-title {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .card-text {
+      font-size: 16px;
+      color: #6c757d;
+    }
+
+    .btn-danger {
+      background-color: #dc3545;
+      border-color: #dc3545;
+    }
+
+    .btn-danger:hover {
+      background-color: #c82333;
+      border-color: #bd2130;
+    }
+  </style>
 </head>
 <body>
 
@@ -15,6 +83,9 @@
   <div class="row" id="selectedItemsContainer">
     <!-- Selected items will be displayed here -->
   </div>
+
+  <!-- Button to add more items -->
+  <button class="btn btn-primary mt-3" onclick="addItem()">Add More Items</button>
 </div>
 
 <!-- Bootstrap JS  -->
@@ -32,7 +103,9 @@
     if (selectedItems.length === 0) {
       selectedItemsContainer.innerHTML = "<p>No items selected.</p>";
     } else {
-      selectedItems.forEach(item => {
+      selectedItemsContainer.innerHTML = ""; // Clear previous items
+
+      selectedItems.forEach((item, index) => {
         let col = document.createElement("div");
         col.className = "col-md-6";
         let card = document.createElement("div");
@@ -42,12 +115,25 @@
           <div class="card-body">
             <h5 class="card-title">${item.description}</h5>
             <p class="card-text">${item.price}</p>
+            <button class="btn btn-danger" onclick="removeItem(${index})">Remove</button>
           </div>
         `;
         col.appendChild(card);
         selectedItemsContainer.appendChild(col);
       });
     }
+  }
+
+  function removeItem(index) {
+    let selectedItems = JSON.parse(localStorage.getItem("selectedItems")) || [];
+    selectedItems.splice(index, 1); // Remove item from array
+    localStorage.setItem("selectedItems", JSON.stringify(selectedItems)); // Update local storage
+    displaySelectedItems(); // Refresh display
+  }
+
+  function addItem() {
+    // Redirect to main.html and go to recent bought section
+    window.location.href = "main.html#recent-bought-section";
   }
 </script>
 
