--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
       </div>
     </div>
 
-    <!-- Modal for Shopping Bag -->
+    <!-- Shopping Bag -->
     <div id="shoppingBagModal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="toggleShoppingBagModal()">&times;</span>
@@ -196,7 +196,7 @@
     </div>
 
 <!--- Recent Bought --->
-    <div class="recent-bought">
+    <div class="recent-bought" id="recent-bought-section">
       <div class="container">
         <h1>Recently Bought </h1>
 
@@ -297,65 +297,6 @@
       </div>
     </div>
 
-<!--- footer section --->
-<!--- <footer>
-  <div class="column-1">
-
-    <ul>
-      <h3>Company Info</h3>
-      <li><a href="#">About THREADED</a></li>
-      <li><a href="#">Affiliate</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Careers</a></li>
-    </ul>
-
-    <ul>
-      <h3>Help & Support</h3>
-      <li><a href="#">FAQ</a></li>
-      <li><a href="#">Shipping</a></li>
-      <li><a href="#">Returns</a></li>
-      <li><a href="#">How To Order</a></li>
-      <li><a href="#">How To Track</a></li>
-    </ul>
-
-    <ul>
-      <h3>Customer Care</h3>
-      <li><a href="#">Contact Us</a></li>
-      <li><a href="#">Payment Methods</a></li>
-    </ul>
-
-  </div>
-  <div class="column-2">
-
-    <ul>
-      <h3>Follow Us</h3>
-      <li><a href="#"><img src="assets/socials/image1.png"></a></li>
-      <li><a href="#"><img src="assets/socials/image2.png"></a></li>
-      <li><a href="#"><img src="assets/socials/image3.png"></a></li>
-      <li><a href="#"><img src="assets/socials/image4.png"></a></li>
-      <li><a href="#"><img src="assets/socials/image5.png"></a></li>
-      <li><a href="#"><img src="assets/socials/image6.png"></a></li>
-
-    </ul>
-
-    <ul>
-      <h3>We Accept</h3>
-      <li><img src="assets/payment-method/image1.png" alt=""></li>
-      <li><img src="assets/payment-method/image2.png" alt=""></li>
-      <li><img src="assets/payment-method/image3.png" alt=""></li>
-      <li><img src="assets/payment-method/image4.png" alt=""></li>
-      <li><img src="assets/payment-method/image5.png" alt=""></li>
-
-    </ul>
-
-  </div>
-  <div class="copyright">
-    <div class="copy-info">
-      <p>©2021 THREADED All Rights Reserved.</p>
-      <img src="assets/nav-bar-menu/logo.png" alt="">
-    </div>
-</footer> --->
-
 <footer>
   <div class="footer-container">
     <!-- Column 1 -->
@@ -390,7 +331,6 @@
       <div class="follow-us">
         <h3>Follow Us</h3>
         <div class="social-images">
-          <!-- Social media icons here -->
           <ul>
             <li><a href="#"><img src="assets/socials/image1.png"></a></li>
             <li><a href="#"><img src="assets/socials/image2.png"></a></li>
@@ -404,7 +344,6 @@
       <div class="we-accept">
         <h3>We Accept</h3>
         <div class="payment-images">
-          <!-- Payment method icons here -->
           <ul>
             <li><img src="assets/payment-method/image1.png" alt=""></li>
             <li><img src="assets/payment-method/image2.png" alt=""></li>
@@ -416,7 +355,6 @@
       </div>
     </div>
   </div>
-  <!-- Copyright -->
   <div class="copyright">
     <div class="copy-info">
       <p>©2021 THREADED All Rights Reserved.</p>
