--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
     <!-- Shopping Bag -->
     <div id="shoppingBagModal" class="modal">
       <div class="modal-content">
-        <span class="close" onclick="toggleShoppingBagModal()">&times;</span>
+        <span class="close" onclick="closeShoppingBagModal()">&times;</span>
         <h2>Shopping Bag</h2>
         <div id="shoppingBagItems"></div>
         <button class="btn btn-primary" onclick="redirectToCheckout()">Checkout</button>
